--- a/_styles/list.scss
+++ b/_styles/list.scss
@@ -3,8 +3,8 @@
 
 ul,
 ol {
-  margin: 20px 0;
-  padding-left: 40px;
+  margin: 8px 0;
+  padding-left: 28px;
 }
 
 ul {
@@ -12,8 +12,8 @@ ul {
 }
 
 li {
-  margin: 5px 0;
-  padding-left: 10px;
+  margin: 3px 0;
+  padding-left: 6px;
   text-align: justify;
   line-height: var(--spacing);
 
